force-app/main/default/objects/Personnel__c/Personnel__c.object-meta.xml
<CustomObject>
    <label>Personnel</label>
    <nameField>
        <label>Personel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Persons</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>