force-app/main/default/objects/Personnel__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The work assignment of the person.</description>
    <label>Assignment</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Assigned Persons</relationshipLabel>
    <relationshipName>Assigned_Persons</relationshipName>
    <type>Lookup</type>
</CustomField>