force-app/main/default/objects/Personnel__c/fields/Castle__c.field-meta.xml
<CustomField>
    <fullName>Castle__c</fullName>
    <description>The castle in which the person resides.</description>
    <label>Castle</label>
    <referenceTo>Castle__c</referenceTo>
    <relationshipLabel>Persons</relationshipLabel>
    <relationshipName>Persons</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>