force-app/main/default/objects/Personnel__c/fields/Disloyal_Subject__c.field-meta.xml
<CustomField>
    <fullName>Disloyal_Subject__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disloyal Subject</label>
    <type>Checkbox</type>
</CustomField>