force-app/main/default/objects/Personnel__c/fields/Favorite_Animal__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Animal__c</fullName>
    <label>Favorite Animal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>