force-app/main/default/objects/Personnel__c/fields/Favorite_Color__c.field-meta.xml
<CustomField>
    <fullName>Favorite_Color__c</fullName>
    <label>Favorite Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>