force-app/main/default/objects/Personnel__c/fields/Performance_rating__c.field-meta.xml
<CustomField>
    <fullName>Performance_rating__c</fullName>
    <label>Performance rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>