force-app/main/default/objects/Personnel__c/fields/Quarters__c.field-meta.xml
<CustomField>
    <fullName>Quarters__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The quarters of the person.</description>
    <label>Quarters</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Quartered Persons</relationshipLabel>
    <relationshipName>Quartered_Persons</relationshipName>
    <type>Lookup</type>
</CustomField>