force-app/main/default/objects/Personnel__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Noble</fullName>
            </value>
            <value>
                <fullName>Castellan</fullName>
            </value>
            <value>
                <fullName>Knight</fullName>
            </value>
            <value>
                <fullName>Chaplain</fullName>
            </value>
            <value>
                <fullName>Armorer</fullName>
            </value>
            <value>
                <fullName>Marshall</fullName>
            </value>
            <value>
                <fullName>Watchman</fullName>
            </value>
            <value>
                <fullName>Cook</fullName>
            </value>
            <value>
                <fullName>Servant</fullName>
            </value>
            <value>
                <fullName>Farmer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>