force-app/main/default/objects/Personnel__c/validationRules/Castle_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Castle_Validation</fullName>
    <active>true</active>
    <description>A person&#39;s assignment and quarters must be at the castle they are at!</description>
    <errorConditionFormula>((Castle__c  !=  Assignment__r.Castle__c) &amp;&amp;  not(ISBLANK(Assignment__c)))  
||  
((Castle__c !=  Quarters__r.Castle__c) &amp;&amp;not(ISBLANK(Quarters__c)))</errorConditionFormula>
    <errorMessage>User must be assigned or quartered to a post corresponding to their current castle location.</errorMessage>
</ValidationRule>