force-app/main/default/objects/Personnel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Title__c</columns>
    <columns>Castle__c</columns>
    <columns>Assignment__c</columns>
    <columns>Quarters__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>